--- a/GrpcService/appsettings.json
+++ b/GrpcService/appsettings.json
@@ -6,5 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "RestApiBaseUrl":  "http://localhost:5046"
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http2"
+    }
+  }
 }
