--- a/RazorPages/Dockerfile
+++ b/RazorPages/Dockerfile
@@ -1,31 +1,21 @@
-# Use the official .NET SDK image to build the application
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 
-# Set the working directory
 WORKDIR /src
 
-# Copy the .csproj file and restore dependencies
+# Copy the project file and restore dependencies
 COPY RazorPages/RazorPages.csproj RazorPages/
 RUN dotnet restore RazorPages/RazorPages.csproj
 
 # Copy the rest of the code
 COPY . .
 
-# Build the application
+# Build and publish the app
 WORKDIR /src/RazorPages
 RUN dotnet publish -c Release -o /app
 
-# Set the base image to the .NET runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:7.0
-
-# Set the working directory
+# Set the base image for runtime
+FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
-
-# Copy the published app from the build stage
 COPY --from=build /app .
-
-# Expose the port for the Razor Pages app
 EXPOSE 5000
-
-# Set the entry point for Razor Pages
 ENTRYPOINT ["dotnet", "RazorPages.dll"]
