--- a/RazorPages/Dockerfile
+++ b/RazorPages/Dockerfile
@@ -1,25 +1,29 @@
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-WORKDIR /src
-
-# Copy the project file and restore dependencies
-COPY RazorPages/RazorPages.csproj RazorPages/
-RUN dotnet restore RazorPages/RazorPages.csproj
-
-# Copy the rest of the code
-COPY . .
-
-# Rename or copy appsettings files to avoid conflict
-RUN cp /src/RazorPages/appsettings.json /src/RazorPages/appsettings.razorpages.json
-RUN cp /src/RazorPages/appsettings.Development.json /src/RazorPages/appsettings.Development.razorpages.json
-
-# Build and publish the app
-WORKDIR /src/RazorPages
-RUN dotnet publish -c Release -o /app/razorpages
-
-# Set the base image for runtime
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER app
 WORKDIR /app
-COPY --from=build /app/razorpages /app
-EXPOSE 5000
+EXPOSE 8080
+EXPOSE 8081
+
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
+WORKDIR /src
+COPY ["RazorPages/RazorPages.csproj", "RazorPages/"]
+COPY ["RestApi/RestApi.csproj", "RestApi/"]
+COPY ["Core/Core.csproj", "Core/"]
+COPY ["Infrastructure/Infrastructure.csproj", "Infrastructure/"]
+COPY ["SoapService/SoapService.csproj", "SoapService/"]
+RUN dotnet restore "./RazorPages/./RazorPages.csproj"
+COPY . .
+WORKDIR "/src/RazorPages"
+RUN dotnet build "./RazorPages.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+FROM build AS publish
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./RazorPages.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "RazorPages.dll"]
