--- a/RestApi/Dockerfile
+++ b/RestApi/Dockerfile
@@ -1,25 +1,27 @@
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-WORKDIR /src
-
-# Copy the project file and restore dependencies
-COPY RestApi/RestApi.csproj RestApi/
-RUN dotnet restore RestApi/RestApi.csproj
-
-# Copy the rest of the code
-COPY . .
-
-# Rename or copy appsettings files to avoid conflict
-RUN cp /src/RestApi/appsettings.json /src/RestApi/appsettings.restapi.json
-RUN cp /src/RestApi/appsettings.Development.json /src/RestApi/appsettings.Development.restapi.json
-
-# Build and publish the app
-WORKDIR /src/RestApi
-RUN dotnet publish -c Release -o /app/restapi
-
-# Set the base image for runtime
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER app
 WORKDIR /app
-COPY --from=build /app/restapi /app
-EXPOSE 5046
+EXPOSE 8080
+EXPOSE 8081
+
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
+WORKDIR /src
+COPY ["RestApi/RestApi.csproj", "RestApi/"]
+COPY ["Core/Core.csproj", "Core/"]
+COPY ["Infrastructure/Infrastructure.csproj", "Infrastructure/"]
+RUN dotnet restore "./RestApi/./RestApi.csproj"
+COPY . .
+WORKDIR "/src/RestApi"
+RUN dotnet build "./RestApi.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+FROM build AS publish
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./RestApi.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "RestApi.dll"]
