--- a/RazorPages/RazorPages.csproj
+++ b/RazorPages/RazorPages.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RestApi\RestApi.csproj" />
-    <ProjectReference Include="..\SoapService\SoapService.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
