--- a/RazorPages/Properties/launchSettings.json
+++ b/RazorPages/Properties/launchSettings.json
@@ -25,6 +25,16 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "WSL": {
+      "commandName": "WSL2",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:7230",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://localhost:7230;http://localhost:5243"
+      },
+      "distributionName": ""
+    },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
