--- a/RazorPages/Dockerfile
+++ b/RazorPages/Dockerfile
@@ -8,6 +8,7 @@ EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
+RUN dotnet dev-certs https
 WORKDIR /src
 COPY ["RazorPages/RazorPages.csproj", "RazorPages/"]
 COPY ["RestApi/RestApi.csproj", "RestApi/"]
@@ -25,5 +26,6 @@ RUN dotnet publish "./RazorPages.csproj" -c $BUILD_CONFIGURATION -o /app/publish
 
 FROM base AS final
 WORKDIR /app
+COPY --from=publish /root/.dotnet/corefx/cryptography/x509stores/my/* /root/.dotnet/corefx/cryptography/x509stores/my/
 COPY --from=publish /app/publish/RazorPages .
 ENTRYPOINT ["dotnet", "RazorPages.dll"]
