--- a/restapi-deployment.yaml
+++ b/restapi-deployment.yaml
@@ -14,14 +14,13 @@ spec:
     spec:
       containers:
         - name: restapi-app
-          image: ${DOCKER_REGISTRY-}restapi
+          image: restapi:latest
           imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 8080  # Expose port 8080
-            - containerPort: 8081  # Expose port 8081 if needed
+            - containerPort: 5046  # Expose port 8080
           env:
-            - name: ASPNETCORE_ENVIRONMENT
-              value: "Production"  # Adjust environment if needed
+            - name: ASPNETCORE_URLS
+              value: "http://+:5046"
 ---
 apiVersion: v1
 kind: Service
@@ -31,8 +30,6 @@ spec:
   selector:
     app: restapi-app
   ports:
-    - port: 8080
-      targetPort: 8080  # Expose port 8080 externally
-    - port: 8081
-      targetPort: 8081  # Expose port 8081 if necessary
+    - port: 5046
+      targetPort: 5046  # Expose port 8080 externally
   type: NodePort  # Use NodePort for external access (or ClusterIP for internal use)
